# advanced-backend

./: .env  .env-db  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  docker-compose-test.yaml  docker-compose.yml  entrypoint.sh
.github/workflows/: production.yml
migrations/2022-12-03-033734_create_users_table/: up.sql
migrations/2022-12-05-001634_create_businesses_table/: up.sql
migrations/2022-12-05-002641_create_screens_table/: down.sql  up.sql
migrations/2022-12-08-040832_create_addresses_table/: up.sql
migrations/2022-12-08-042402_change_screens_table/: down.sql  up.sql
migrations/2022-12-08-044328_change_ads_table/: up.sql
migrations/2022-12-08-044652_change_category_table/: up.sql
migrations/2022-12-08-045002_create_ad_order_table/: down.sql  up.sql
migrations/2022-12-08-050212_create_payments_table/: up.sql
migrations/2022-12-08-050816_create_incomes_table/: up.sql
migrations/2022-12-08-051902_create_ad_category_table/: down.sql  up.sql
migrations/2022-12-08-052540_create_business_categories_table/: down.sql  up.sql
migrations/2023-08-07-184648_users_table/: up.sql
migrations/2023-08-07-193026_create_businesses_table/: down.sql  up.sql
migrations/2023-08-07-193331_create_addresses_table/: up.sql
migrations/2023-08-07-202851_create_screens_table/: up.sql
migrations/2023-08-07-203648_create_ads_table/: up.sql
migrations/2023-08-07-203809_create_category_table/: up.sql
migrations/2023-08-07-203900_create_ad_order_table/: down.sql  (+1 more)
nginx/: nginx.conf
src/: config.rs  errors.rs  files.rs  main.rs  schema.rs
(+39 files in other folders)
