[package]
name = "advanced-backend"
version = "0.1.0"
authors = ["Yurii Stolbetskyi <yurii.stolbetskyi@nure.ua>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
diesel = { version = "2.0.2", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "2.0.0"

actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
