[package]
name = "advanced-backend"
version = "0.1.0"
authors = ["Yurii Stolbetskyi <yurii.stolbetskyi@nure.ua>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.2.1"
actix-multipart = "0.4.0"
actix-form-data = "0.6.2"
futures-util = "0.3.25"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
dotenv = "0.15.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
diesel = { version = "2.0.2", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "2.0.0"
r2d2 = "0.8.10"

# logs
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"

actix-web-httpauth = "0.8.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
